added home page

--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
     </style>
 </head>
 <body>
+    <nav>
+        homepage page-2 page-3
+    </nav>
+    <h1> this is h1 </h1>
+    <h2> this is h2 </h2>
 </body>
 </html>
