--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Funny-Thursday</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
         body {
         background-image: url(https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzhvMHFybzJvbGoyd2JnZHZqc2RqaTNlMDUwajZ5c2FtZmphcmNnMiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mcJohbfGPATW8/giphy.gif) ;
         background-repeat: no-repeat;
         background-position: center;
         height: 100vh;
+        }
+        body {
+            font-family: "Roboto", sans-serif;
         }
     </style>
 </head>
