--- a/index.html
+++ b/index.html
@@ -6,18 +6,30 @@
     <title>Funny-Thursday</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        
+        html {
+            margin: 
+        }
+
         body {
         background-image: url(https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzhvMHFybzJvbGoyd2JnZHZqc2RqaTNlMDUwajZ5c2FtZmphcmNnMiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mcJohbfGPATW8/giphy.gif) ;
         background-repeat: no-repeat;
         background-position: center;
         height: 100vh;
         font-family: "Roboto", sans-serif;
+        margin: 0px
+        }
+
+        span {
+            border: 1px dotted darkmagenta
         }
     </style>
 </head>
 <body>
     <nav>
-        homepage page-2 page-3
+        <span>homepage</span>
+        <span>page-2</span>
+        <span>page-3</span> 
     </nav>
     <h1> this is h1 </h1>
     <h2> this is h2 </h2>
