--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
         
-        html {
-            margin: 
-        }
+
 
         body {
         background-image: url(https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzhvMHFybzJvbGoyd2JnZHZqc2RqaTNlMDUwajZ5c2FtZmphcmNnMiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/mcJohbfGPATW8/giphy.gif) ;
@@ -22,6 +20,11 @@
 
         span {
             border: 1px dotted darkmagenta
+        }
+        nav{
+            width: 40%;
+            margin-left: auto;
+            margin-right: auto;
         }
     </style>
 </head>
